# indoor_localization

./: .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  setup.py  tracks.yaml
data/: plab_data_publish_node.py  plab_encoder_data_2.csv
debian/: changelog  control  gbp.conf  rules
include/: localization_node.h
launch/: localization_2D.launch  localization_node.launch  localization_other.launch  start_localization.launch
msg/: AnchorScan.msg  AnchorSelected.msg  ErrorEstimated.msg  ParamsKPI.msg  PositionInfo.msg
params/: localization_params.yaml  region_params.yaml
src/: localization_node.cpp
src/indoor_localization/: anchor_selection_node.py  error_estimation_node.py  hardware_ros_driver_template.py  kpi_calculation_node.py  localization_node.py  positioning_node.py  simulator.py  start_localization_node.py
test/: .coverage  .coverage-modules  anchor_selection_node_test.py  error_estimation_node_test.py  kpi_calculation_node_test.py  localization_node_test.cpp  localization_node_test.py  positioning_node_test.py
