<?xml version="1.0"?>
<package format="2">
  <name>indoor_localization</name>
  <version>1.0.0</version>
  <description>The indoor_localization package</description>

  <maintainer email="elcin.erdogan@inovasyonmuhendislik.com">Elcin Erdogan</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/indoor_localization</url>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>uwb_hardware_driver</build_depend>
  <build_depend>libjsoncpp-dev</build_depend>
  <!-- <build_depend>plab_comm</build_depend> -->

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rostest</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <build_export_depend>uwb_hardware_driver</build_export_depend>
  <!-- <build_export_depend>plab_comm</build_export_depend> -->

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rostest</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>uwb_hardware_driver</exec_depend>
  <exec_depend>libjsoncpp</exec_depend>
  <!-- <exec_depend>plab_comm</exec_depend> -->

  <test_depend>rosunit</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
